--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lexend:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.custom-gradient {
+    background-image: linear-gradient(
+        135deg,
+        #111722 0%,
+        #2e395c 50%,
+        #111722 100%
+    );
+}
+
+.lexend-semibold {
+    font-family: 'Lexend', sans-serif;
+    font-weight: 700;
+}
+.lexend-medium {
+    font-family: 'Lexend', sans-serif;
+    font-weight: 500;
+}
+.lexend-normal {
+    font-family: 'Lexend', sans-serif;
+    font-weight: 400;
+}
+.lexend-bold {
+    font-family: 'Lexend', sans-serif;
+    font-weight: 600;
+}
+
+.lexend-light {
+    font-family: 'Lexend', sans-serif;
+    font-weight: 300;
+}
+
+.inter-bold {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+}
+
+.inter-light {
+    font-family: 'Inter', sans-serif;
+    font-weight: 300;
+}
+.inter-normal {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+}
