--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Custom Gradient */
 .custom-gradient {
     background-image: linear-gradient(
         135deg,
@@ -13,6 +14,7 @@
     );
 }
 
+/* Typography */
 .lexend-semibold {
     font-family: 'Lexend', sans-serif;
     font-weight: 700;
@@ -48,3 +50,37 @@
     font-family: 'Inter', sans-serif;
     font-weight: 400;
 }
+
+/* Navbar CSS */
+.nav-link {
+    position: relative;
+    color: #79808a;
+    transition: color 0.3s ease;
+}
+
+.nav-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -2px;
+    height: 2px;
+    background-color: white;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease;
+}
+
+.nav-link:hover {
+    color: white;
+}
+
+.nav-link:hover::after {
+    transform: scaleX(1);
+}
+
+.hover\:text-white:hover {
+    color: #ffffff;
+}
+
+/* slider css */
