fixed some bugs

--- a/src/index.css
+++ b/src/index.css
@@ -84,4 +84,30 @@
     color: #ffffff;
 }
 
-/* page reveal */
+/* ScrollBar Thumb */
+
+body {
+    --sb-track-color: #232e33;
+    --sb-thumb-color: #4a6cf7;
+    --sb-size: 14px;
+}
+
+body::-webkit-scrollbar {
+    width: var(--sb-size);
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--sb-track-color);
+    border-radius: 1px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: var(--sb-thumb-color);
+    border-radius: 2px;
+}
+
+@supports not selector(::-webkit-scrollbar) {
+    body {
+        scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+    }
+}
